src/objects/ADvendio__ExternalAccountID__c.object
<CustomObject>
    <description>This object stores the Accounts number from an external system in relation to an Account.</description>
    <fields>
        <fullName>ADvendio__Account__c</fullName>
        <description>This is the Master Detail Relationship to the Account.</description>
        <inlineHelpText>This is the Master Detail Relationship to the Account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>ExternalIDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <description>Please enter a Description in this field.</description>
        <inlineHelpText>Please enter a Description in this field.</inlineHelpText>
        <label>Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__ExternalSystem__c</fullName>
        <description>Please choose your external system.</description>
        <inlineHelpText>Please choose your external system.</inlineHelpText>
        <label>External System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DWH</fullName>
                </value>
                <value>
                    <fullName>FormerCRM</fullName>
                    <label>Former CRM</label>
                </value>
                <value>
                    <fullName>Navision</fullName>
                </value>
                <value>
                    <fullName>Sage</fullName>
                </value>
                <value>
                    <fullName>SAPFI</fullName>
                    <label>SAP/FI</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ID__c</fullName>
        <description>Please enter the External ID from the Account here.</description>
        <inlineHelpText>Please enter the External ID from the Account here.</inlineHelpText>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>External Account ID</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Account__c</columns>
        <columns>ADvendio__ExternalSystem__c</columns>
        <columns>ADvendio__ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ADvendio__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EID-{000}</displayFormat>
        <label>External Account ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Account IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>